--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Jacob Elbaz",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
